# CompTonto

./: .gitignore  CMakeLists.txt  README.md  lexer.l  main.cpp  parser.tab.c  parser.y  teste.tonto
Src/: parser.cpp  parser.h  symbol_table.cpp  symbol_table.h
examples/: example0.tonto  example2.tonto  example3.tonto  example4.tonto  example5.tonto  example6.tonto  example7.tonto  example8.tonto  example9.tonto
include/: colors.h  file_generator.h  semantic_analyser.h  symbol_table.h  synthesis_table.h  tokens.h
output/: relatorio.txt  symbol_table.json
src/: file_generator.cpp  parser.cpp  semantic_analyser.cpp  symbol_table.cpp  synthesis_table.cpp
